--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@koa/cors": "^3.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-subdomain": "^1.0.5",
-    "mongodb": "^3.6.0",
+    "jimp": "^0.16.1",
+    "koa": "^2.13.0",
+    "koa-body": "^4.2.0",
+    "koa-body-clean": "^1.0.0",
+    "koa-router": "^9.4.0",
+    "koa-send": "^5.0.1",
+    "koa-static": "^5.0.0",
+    "koa-subdomain": "^3.0.0",
+    "mongoose": "^5.10.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-scroll-parallax": "^2.3.4"
   },
   "scripts": {
@@ -40,7 +46,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "http://localhost:4431",
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
