--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-body-clean": "^1.0.0",
+    "koa-mount": "^4.0.0",
     "koa-router": "^9.4.0",
     "koa-send": "^5.0.1",
     "koa-static": "^5.0.0",
